# TimeStitch

./: .gitignore  GAME_PLAN.md  README.md  animal-adventure.html  critter-adventure.html  pyproject.toml  story-game-prototype.html
docs/: index.html
tests/: test_core.py
timestitch/: __init__.py  core.py
