[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timestitch"
version = "0.1.0"
description = "Temporal context middleware for LLM and autonomous agent sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Cedric Conday" }]
keywords = ["llm", "agents", "temporal", "middleware", "anthropic", "openai", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tzlocal>=4.0",
]

[project.urls]
Homepage = "https://github.com/CedricConday/TimeStitch"
Repository = "https://github.com/CedricConday/TimeStitch"
